[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/explosion.gd" type="Script" id=1]
[ext_resource path="res://explosion_particels/Explosion_particels.tscn" type="PackedScene" id=2]
[ext_resource path="res://scences/explosion_decal.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.639216, 0.0117647, 0.0117647, 1 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1 )

[sub_resource type="SphereShape" id=5]
radius = 11.0

[node name="Bomb" type="RigidBody"]
script = ExtResource( 1 )
explosion_decal = ExtResource( 3 )
explosion_praticles = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.28, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
